--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
+    "@react-navigation/stack": "^6.1.1",
     "react": "17.0.2",
-    "react-native": "0.67.2"
+    "react-native": "0.67.2",
+    "react-native-design-utility": "^2.0.4",
+    "react-native-gesture-handler": "^2.2.0",
+    "react-redux": "^7.2.6",
+    "redux-thunk": "^2.4.1",
+    "react-native-screens": "*",
+    "react-native-safe-area-context": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
