--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
+    "i18next": "^21.6.12",
     "react": "17.0.2",
+    "react-i18next": "^11.15.5",
     "react-native": "0.67.2",
     "react-native-design-utility": "^2.0.4",
     "react-native-gesture-handler": "^2.2.0",
-    "react-redux": "^7.2.6",
-    "redux-thunk": "^2.4.1",
+    "react-native-safe-area-context": "*",
     "react-native-screens": "*",
-    "react-native-safe-area-context": "*"
+    "react-redux": "^7.2.6",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
