--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-gesture-handler": "^2.2.0",
     "react-native-safe-area-context": "*",
     "react-native-screens": "*",
+    "react-native-switch-selector": "^2.1.4",
     "react-redux": "^7.2.6",
     "redux-thunk": "^2.4.1"
   },
