--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-native-firebase/app": "^14.5.1",
     "@react-native-firebase/auth": "^14.5.1",
+    "@react-native-firebase/database": "^14.5.1",
+    "@react-native-firebase/firestore": "^14.5.1",
     "@react-native-google-signin/google-signin": "^7.1.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
@@ -26,7 +28,9 @@
     "react-native-safe-area-context": "*",
     "react-native-screens": "*",
     "react-native-switch-selector": "^2.1.4",
+    "react-native-vector-icons": "^9.1.0",
     "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
@@ -35,6 +39,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.15",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
