--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/picker": "^1.8.1",
     "@react-native-firebase/app": "^14.5.1",
     "@react-native-firebase/auth": "^14.5.1",
     "@react-native-firebase/database": "^14.5.1",
@@ -25,6 +26,9 @@
     "react-native": "0.67.2",
     "react-native-design-utility": "^2.0.4",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-paper": "^4.12.0",
+    "react-native-picker-select": "^8.0.4",
+    "react-native-radio-buttons-group": "^2.2.10",
     "react-native-safe-area-context": "*",
     "react-native-screens": "*",
     "react-native-switch-selector": "^2.1.4",
