--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-radio-buttons-group": "^2.2.10",
     "react-native-safe-area-context": "*",
     "react-native-screens": "*",
+    "react-native-swiper": "^1.6.0",
     "react-native-switch-selector": "^2.1.4",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^7.2.6",
